No longer set overflow:auto for the mask on FF/Win, to help avoid FF textbox missing cursor bug (partial fix for SF bug 1877125). Still setting overflow:auto for FF/MacOS to prevent scrollbar bleedthrough, so missing cursor remains a "known issue" for FF/MacOS.

--- a/widget/container/src/css/container-core.css
+++ b/widget/container/src/css/container-core.css
@@ -17,9 +17,13 @@
     left: 0;
     right: 0;
     bottom: 0;
+}
+
+.mask.block-scrollbars {
     /*
         Application of "overflow:auto" prevents Mac scrollbars from bleeding
-        through the modality mask in Gecko.
+        through the modality mask in Gecko. The block-scollbars class is only 
+        added for Gecko on MacOS
     */
     overflow: auto;
 }
@@ -101,22 +105,16 @@ PLEASE NOTE:
 }
 
 .hide-scrollbars select {
-
     display: none;
-
 }
 
 .show-scrollbars {
-
     overflow: auto;
-
 }
 
 .yui-panel-container.show-scrollbars,
 .yui-tt.show-scrollbars {
-
     overflow: visible;
-
 }
 
 .yui-panel-container.show-scrollbars .underlay,
